# felt

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  FAQ  FAQ.html  INSTALL  Makefile  README  README.old  TODO  configure
doc/: Makefile  bibcontents.sty  felt.bbl  felt.tex  linuxdoc.sty  private.sty
doc/figures/: beam.eps  beam.fig  beam.tex  brick_numbers.eps  brick_numbers.fig  brick_numbers.tex  example1.eps  example1.fig  example1.tex  example2.eps  example2.fig  example2.tex  htk.eps  htk.fig  htk.tex  icon.eps  icon.fig  icon.fig.bak  icon.tex  icon_tmp.fig  icon_tmp.tex  iso_numbers.eps  iso_numbers.fig  iso_numbers.tex  load_fig.eps  load_fig.fig  load_fig.tex  sawtooth.eps  sawtooth.fig  sawtooth.tex  spring.eps  spring.fig  spring.tex  spring2.eps  spring2.fig  spring2.tex  spring_mass.eps  spring_mass.fig  spring_mass.tex  velvet_analysis.eps  (+30 more)
doc/misc/: abib.tex  appendix.tex  appendix_old.tex  felt.bib  felt.txt  foreword.tex  gpl.tex  title.tex
doc/styles/: priv_math.sty
doc/text/: adding_elts.tex  algorithm.tex  analysis.tex  burlap_app.tex  burlap_syntax.tex  corduroy.tex  elements.tex  felt_prog.tex  intro.tex  xfelt.tex  (+4 more)
etc/: Makefile  Makefile.conf  Makefile.dirs  Makefile.lib  Makefile.man  bindist
examples/: README  axisymm.flt  beam.flt  beam3d_2d.flt  beam3d_a.flt  beam3d_b.flt  beam3d_dist.flt  beam3d_dist_a.flt  beam_lc.flt  beam_nl.flt  beam_range.flt  beam_ss.flt  beamspec.flt  bicycle_boys.flt  bicycle_girls.flt  boxtruss.flt  brick.flt  brick_beam.flt  brick_cap.flt  brick_ring.flt  bridge.flt  bridge_dyn.flt  bridge_spec.flt  ctg.flt  ctg_simple.flt  cube.flt  displ.flt  dist_mult.flt  distrib_a.flt  distrib_b.flt  distrib_c.flt  distrib_d.flt  distrib_e.flt  dynamic.flt  dynframe.flt  dynspect.flt  errors.flt  flexure.flt  frame.flt  frame3.flt  (+48 more)
include/: Drawing.h  FElt.icon  Item.h  Layout.h  Rheostat.h  TabGroup.h  Tree.h  allocate.h  appearance.h  appearanceinp.h  bivar.h  bmp.h  check.xbm  cmatrix.h  code.h  complex.h  computer.xbm  config.h  config.h.in  contour.h  cvector1.hpp  definition.h  dialog.h  draw.h  draw.hpp  eps.h  error.h  fe.h  fe.hpp  fforward.xbm  forward.xbm  graph.h  graph.hpp  inptypes.h  matrix.h  menu16.xbm  mesh.h  mesh_geompk.h  meshgen.hpp  objects.h  (+23 more)
lib/: CMakeLists.txt  Makefile
lib/Felt/: CMakeLists.txt  Makefile  Tree.c  code.c  code.cpp  definition.c  definition.cpp  detail.c  draw.c  draw.cpp  fe.c  fe.cpp  file.c  file.cpp  initialize.c  initialize.cpp  lexer.c  lexer.l  modal.c  modal.cpp  nonlinear.c  nonlinear.cpp  objects.c  objects.cpp  parser.c  parser.cpp  parser.hpp  parser.y  problem.c  problem.cpp  renumber.c  renumber.cpp  results.c  results.cpp  rosenbrock.c  rosenbrock.cpp  spectral.c  spectral.cpp  strdup.c  transient.c  (+2 more)
man/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Makefile  Makefile.orig
src/Burlap/: CMakeLists.txt  Makefile  TODO  allocate.h  apply.c  apply.cpp  apply.h  arithmetic.c  arithmetic.cpp  arithmetic.h  array.c  array.cpp  array.h  assignment.c  assignment.cpp  assignment.h  burlap.c  burlap.cpp  codegen.c  codegen.h  coerce.c  coerce.cpp  coerce.h  consttab.h  control.c  control.h  debug.c  debug.cpp  debug.h  descriptor.c  descriptor.cpp  descriptor.h  desctab.h  error.c  error.cpp  error.h  exectab.h  execute.c  execute.h  fefunc.c  (+68 more)
src/Burlap/Examples/: beam.flt  cholesky.b  distrib.flt  dump.b  edit.b  fe.b  find-dofs.b  foo.flt  foo_d.flt  input  solve.b  sum.b  test  truss.b  truss_d.flt  zero.b
src/Burlap/Help/: copyright  help.fe  help.math  help.misc  help.mtx  help.op  help.pred
src/Corduroy/: CMakeLists.txt  Makefile  corduroy.c  corduroy.cpp  debug.c  debug.cpp  error.c  error.cpp  femur.flt  generator.c  generator.cpp  generator.h  geninput.h  lexer.c  lexer.l  parser.c  parser.y  y.tab.h
src/Corduroy/Examples/: brick.crd  brick_beam.crd  example1.crd  example2.crd  example4.crd  grid.crd  grid_rules.crd  grid_rules.flt  line.crd  line_cos.crd  mesh.crd  quad_log.crd  quad_log.flt  quadgrid.crd  sample.crd  strongback.crd  test.crd
src/Velvet/: Analysis.h  CMakeLists.txt  Canvas.h  Colors.h  Constraint.h  Contour.h  Element.h  ElementList.h  FileDialog.h  Force.h  Grid.h  Load.h  LoadCase.h  Makefile  Makefile.orig  Material.h  Node.h  OutputDialog.h  Solution.h  Trimesh.h  Velvet.ad  Wireframe.h  XCC.README  XCC.c  XCC.h  XCCP.h  analysis.c  analysis.cpp  animate.c  animate.cpp  apply.c  apply.cpp  bivar.c  callbacks.c  callbacks.cpp  callbacks.h  canvas.c  canvas.cpp  colormap.h  colors.c  (+86 more)
(+216 files in other folders)
